--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,68 @@
   <meta charset="utf-8">
   <title>DsProjects</title>
   <base href="/">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+
+<!-- Vendor & Plugins CSS (Please remove the comment from below vendor.min.css & plugins.min.css for better website load performance and remove css files from avobe) -->
+<!--
+<link rel="stylesheet" href="../src/assets/css/vendor/vendor.min.css">
+<link rel="stylesheet" href="../src/assets/css/plugins/plugins.min.css">
+-->
+
+
+
+
 </head>
 <body>
   <app-root></app-root>
+
+
+    <!-- Modernizer JS -->
+    <script src="../src/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+
+    <!-- jQuery JS -->
+    <script src="../src/assets/js/vendor/jquery.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="../src/assets/js/vendor/bootstrap.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="../src/assets/js/vendor/popper.min.js"></script>
+
+    <!-- Swiper Slider JS -->
+    <script src="../src/assets/js/plugins/swiper.min.js"></script>
+
+    <!-- Light gallery JS -->
+    <script src="../src/assets/js/plugins/lightgallery.min.js"></script>
+
+    <!-- Light gallery video JS -->
+    <script src="../src/assets/js/plugins/lg-video.min.js"></script>
+
+    <!-- Waypoints JS -->
+    <script src="../src/assets/js/plugins/waypoints.min.js"></script>
+
+    <!-- Counter up JS -->
+    <script src="../src/assets/js/plugins/counterup.min.js"></script>
+
+    <!-- Mailchimp JS -->
+    <script src="../src/assets/js/plugins/mailchimp-ajax-submit.min.js"></script>
+
+    <!-- Plugins JS (Please remove the comment from below plugins.min.js for better website load performance and remove plugin js files from avobe) -->
+
+    <!--
+<script src="../src/assets/js/plugins/plugins.min.js"></script>
+-->
+
+    <!-- Main JS -->
+    <script src="../src/assets/js/main.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </body>
 </html>
